syntax = "proto3";
package moneydashboard.v4;

import "moneydashboard/v4/currencies.proto";
import "moneydashboard/v4/users.proto";

option go_package = "github.com/markormesher/money-dashboard/internal/api_gen/moneydashboard/v4;mdv4";

service MDService {
  // currencies.proto
  rpc GetAllCurrencies(GetAllCurrenciesRequest) returns (GetAllCurrenciesResponse);

  // users.proto
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetProfiles(GetProfilesRequest) returns (GetProfilesResponse);
  rpc SetActiveProfile(SetActiveProfileRequest) returns (SetActiveProfileResponse);
}
